9 labs; 9 lw with RSpec but without Capybara and Selenium

--- a/lr9-turbo-stream/solution/app/views/layouts/application.html.erb
+++ b/lr9-turbo-stream/solution/app/views/layouts/application.html.erb
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sandbox</title>
+    <title>Solution</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
     <style>
-    table{
-      border-spacing: 0;
-      margin-bottom: 40px;
-    }
+      table{
+        border-spacing: 0;
+        margin-bottom: 40px;
+      }
       th, tr, td{
         border: 1px solid black;
       }
