--- a/lr8/sandbox/app/views/example/show.html.erb
+++ b/lr8/sandbox/app/views/example/show.html.erb
@@ -6,7 +6,7 @@
     <% @range.each_with_index do |element, index| %>
         <% if @compare[index] %>
             <tr>
-                <th><%= index + 1 %></th><th><%= element %></th>
+                <td><%= index + 1 %></td><td><%= element %></td>
             </tr>
         <% end %> 
     <% end %>
